# cygnus

./: .gitignore  Cargo.toml  LICENSE  README.md  architecture.drawio  csu-cluster.yaml  docker-compose.yml  mojoproject.toml  pyproject.toml  test.py
cygnus/: .env  pyproject.toml  test.html  version.py
cygnus/anomaly/: base.py  test.py
cygnus/frontend/: main.py
cygnus/models/vad/CNN_BiLSTM/: model.py
cygnus/models/vad/MarbleNet/: model.py
cygnus/models/vad/ResNET/: model.py
cygnus/models/vad/Tr_VAD/: model.py
cygnus/processing/: __init__.py  mfcc.py  raw_waveform.py  spectogram.py  stft.py
cygnus/visualize/: segment_prediction.py
middleware/: hello.py  pyproject.toml
middleware/app/: main.py
middleware/app/api/v1/nodes/: routes.py
middleware/app/ingest/: mqtt.py
paper/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
src/: main.rs
terraform/: main.tf  variables.tf
